tests/src/frontend/typechecking/invalid/async_mut_4.sk
class Foo() {
  async fun no<T: readonly Show>(T): ^void {
    void
  }
}

mutable class X(mutable v: Int) uses Show {
  readonly fun toString(): String {
    this.v.toString()
  }
}

fun no(): void {
  _ = Foo().no(mutable X(42))
}
